Fixed "((a).(b))" bug in unwrapExpr(string). Now seems to work correctly.

--- a/dm/style.css
+++ b/dm/style.css
@@ -62,4 +62,6 @@ canvas {
 	margin: 10px;
 	
 	border: 5px solid #999;
+	
+	display: block;
 }
